--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@coral-xyz/anchor": "^0.29.0",
         "@coral-xyz/spl-token": "^0.28.0",
+        "@pythnetwork/client": "^2.19.0",
         "@solana/spl-token": "^0.3.9",
         "@solana/web3.js": "^1.87.6"
     },
