--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,6 +7,9 @@ skip-lint = false
 [programs.localnet]
 spreadmarket = "2MWAqfKiQ1BTtW6sdBaAWrS9GNjQm1ixdjvhYabuFZeH"
 
+[programs.devnet]
+spreadmarket = "2MWAqfKiQ1BTtW6sdBaAWrS9GNjQm1ixdjvhYabuFZeH"
+
 [registry]
 url = "https://api.apr.dev"
 
