--- a/website/spreadmarket/package.json
+++ b/website/spreadmarket/package.json
@@ -16,6 +16,7 @@
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
+    "@solana/spl-token": "^0.3.9",
     "@solana/web3.js": "^1.91.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
